# Anamoly-Detection

./: .flake8  .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  README_LIVE.md  SOLUTION_FINAL.md  app.py  background_service.py  database.py  detector.py  direct_protocol_detector.py  enhanced_packet_analyzer.py  feature_extraction.py  live_packet_capture.py  ml_model.py  ml_model_backup.py  network_capture.py  packet_capture_service.py  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  simple_app.py  simple_kitnet.py  start.py  test_basic.py  test_core.py  test_critical_routes.py  test_final.py  test_imports.py  test_live_capture.py  test_packet_capture.py  test_start_analyse_integration.py
config/: config.py  config.yaml  config.yaml.example
models/: autoencoder_model.pkl  ensemble_model.pkl  model_metadata.json  models_metadata.json  untrained_model.pkl
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  anomalies.html  base.html  baseline.html  dashboard.html  live_dashboard.html  login.html  models.html  network_traffic.html  settings.html  test_capture.html
